@@ -2,8 +2,12 @@ package com.company.jmixpmflowbase.app;
 
 import com.company.jmixpmflowbase.entity.User;
 import io.jmix.core.DataManager;
+import io.jmix.core.ValueLoadContext;
+import io.jmix.core.entity.KeyValueEntity;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.util.List;
 
 @Service
 public class TaskService {
@@ -19,7 +23,7 @@ public class TaskService {
                 .addProperty("user")
                 .addProperty("efforts"));
 
-        User leastBusy = keyValueEntities.get(0).getValue("user");
+        User leastBusy = keyValueEntities.getFirst().getValue("user");
         if (leastBusy == null) {
             throw new IllegalStateException();
         }
